# synthetic-knn

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yaml
notebooks/: 00_preprocess_data.ipynb  01_create_synthetic_plots.ipynb
src/synthetic_knn/: mesh.py  point_networks.py  synthetic_plots.py
tests/: test_mesh.py  test_point_networks.py
tests/test_mesh/: test_mesh_generation_2_10_equal_interval_.npz  test_mesh_generation_2_10_quantile_.npz  test_mesh_generation_2_2_equal_interval_.npz  test_mesh_generation_2_2_quantile_.npz  test_mesh_generation_2_3_equal_interval_.npz  test_mesh_generation_2_3_quantile_.npz  test_mesh_generation_2_4_equal_interval_.npz  test_mesh_generation_2_4_quantile_.npz  test_mesh_generation_2_6_equal_interval_.npz  test_mesh_generation_2_6_quantile_.npz  test_mesh_generation_2_8_equal_interval_.npz  test_mesh_generation_2_8_quantile_.npz  test_mesh_generation_3_10_equal_interval_.npz  test_mesh_generation_3_10_quantile_.npz  test_mesh_generation_3_2_equal_interval_.npz  test_mesh_generation_3_2_quantile_.npz  test_mesh_generation_3_3_equal_interval_.npz  test_mesh_generation_3_3_quantile_.npz  test_mesh_generation_3_4_equal_interval_.npz  test_mesh_generation_3_4_quantile_.npz  test_mesh_generation_3_6_equal_interval_.npz  test_mesh_generation_3_6_quantile_.npz  test_mesh_generation_3_8_equal_interval_.npz  test_mesh_generation_3_8_quantile_.npz  test_mesh_generation_4_10_equal_interval_.npz  test_mesh_generation_4_10_quantile_.npz  test_mesh_generation_4_2_equal_interval_.npz  test_mesh_generation_4_2_quantile_.npz  test_mesh_generation_4_3_equal_interval_.npz  test_mesh_generation_4_3_quantile_.npz  test_mesh_generation_4_4_equal_interval_.npz  test_mesh_generation_4_4_quantile_.npz  test_mesh_generation_4_6_equal_interval_.npz  test_mesh_generation_4_6_quantile_.npz  test_mesh_generation_4_8_equal_interval_.npz  test_mesh_generation_4_8_quantile_.npz
tests/test_point_networks/: test_mesh_generation_2_10_equal_interval_.npz  test_mesh_generation_2_10_quantile_.npz  test_mesh_generation_2_2_equal_interval_.npz  test_mesh_generation_2_2_quantile_.npz  test_mesh_generation_2_4_equal_interval_.npz  test_mesh_generation_2_4_quantile_.npz  test_mesh_generation_2_6_equal_interval_.npz  test_mesh_generation_2_6_quantile_.npz  test_mesh_generation_2_8_equal_interval_.npz  test_mesh_generation_2_8_quantile_.npz  test_mesh_generation_3_10_equal_interval_.npz  test_mesh_generation_3_10_quantile_.npz  test_mesh_generation_3_2_equal_interval_.npz  test_mesh_generation_3_2_quantile_.npz  test_mesh_generation_3_4_equal_interval_.npz  test_mesh_generation_3_4_quantile_.npz  test_mesh_generation_3_6_equal_interval_.npz  test_mesh_generation_3_6_quantile_.npz  test_mesh_generation_3_8_equal_interval_.npz  test_mesh_generation_3_8_quantile_.npz  test_mesh_generation_4_10_equal_interval_.npz  test_mesh_generation_4_10_quantile_.npz  test_mesh_generation_4_2_equal_interval_.npz  test_mesh_generation_4_2_quantile_.npz  test_mesh_generation_4_4_equal_interval_.npz  test_mesh_generation_4_4_quantile_.npz  test_mesh_generation_4_6_equal_interval_.npz  test_mesh_generation_4_6_quantile_.npz  test_mesh_generation_4_8_equal_interval_.npz  test_mesh_generation_4_8_quantile_.npz
